bk_ida/gccida/g2/gen_eh_return
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_eh_return/src/insn-emit.c:15006:30: error: use of undeclared identifier 'machine_mode'
v2 = gen_rtx_fmt_ee( PLUS, ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), global_rtl[5], operand0); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_eh_return/src/insn-emit.c:15008:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_MEM( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), v3); 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/gen_eh_return/src/obj/insn-emit.o] Error 1
